--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rbx-js-sdk",
   "version": "1.0.2",
-  "description": "RBX JS/TS SDK",
+  "description": "Typescript/Javascript integration for RBX with node and browser support.",
   "main": "lib/index.js",
   "browser": "lib/browser.js",
   "types": "lib/index.d.ts",
