--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,9 +11,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.13.0
-          npm-version: 8.19.3
-      - run: npm i --ignore-engines
+          node-version: 18
+      - run: npm i
       - run: npm test
 
   publish-npm:
@@ -23,10 +22,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.13.0
-          npm-version: 8.19.3
+          node-version: 18
           registry-url: https://registry.npmjs.org/
-      - run: npm i --ignore-engines
+      - run: npm i
       - run: npm run build
       - run: npm publish
         env:
