--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rbx-js-sdk",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "Typescript/Javascript integration for RBX with node and browser support.",
   "main": "lib/index.js",
   "browser": "lib/browser.js",
@@ -16,7 +16,7 @@
     "lint:fix": "eslint src --fix --ext .js,.ts",
     "test": "jest --config jest.config.js --silent='false'",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
+    "prepublishOnly": "npm test && npm run lint && cp ./resources/cipher-fix.js ./lib/cipher-fix.js",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
