--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,8 +36,19 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          PRIVATE_KEY: ${{secrets.PRIVATE_KEY}}
+          PUBLIC_KEY: ${{secrets.PUBLIC_KEY}}
+          FROM_ADDRESS: ${{secrets.FROM_ADDRESS}}
+          TO_ADDRESS: ${{secrets.TO_ADDRESS}}
+          WALLET_ADDRESS: ${{secrets.WALLET_ADDRESS}}
 
       - name: Publish
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          PRIVATE_KEY: ${{secrets.PRIVATE_KEY}}
+          PUBLIC_KEY: ${{secrets.PUBLIC_KEY}}
+          FROM_ADDRESS: ${{secrets.FROM_ADDRESS}}
+          TO_ADDRESS: ${{secrets.TO_ADDRESS}}
+          WALLET_ADDRESS: ${{secrets.WALLET_ADDRESS}}
