--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "prepublishOnly": "npm test && npm run lint && cp ./resources/cipher-fix.js ./lib/cipher-fix.js",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags",
-    "postinstall": "yarn fix:cipher",
-    "fix:cipher": "cp ./node_modules/rbx-js-sdk/lib/cipher-fix.js ./node_modules/cipher-base/index.js"
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
